Changes to bench_neo4j